# drift

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: build-icon.mjs  fetch-xray.mjs
src/: App.css  App.tsx  Art.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  paths.rs  proxy.rs  vless.rs  xray.rs
