[package]
name = "vpn-client"
version = "0.1.1"
description = "VLESS VPN client (Xray-core under the hood)"
authors = ["you"]
edition = "2021"

[lib]
name = "vpn_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "sync", "time"] }
anyhow = "1"
thiserror = "2"
url = "2"
percent-encoding = "2"
once_cell = "1"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Networking_WinInet",
] }
